# Face-Emotion-Recognition-App

./: .gitignore  main.py  pyproject.toml  requirements.txt
model/: emotion_cnn.keras
