[project]
name = "face-emotion-recognition-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.2.2",
    "keras>=3.15.0",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "streamlit>=1.59.2",
    "tensorflow>=2.21.0",
]
